# SENESCHAL-by-Ethernium

./: .gitignore  BLUEPRINT.md  CHANGELOG.md  CONTINUITY_USAGE.md  EXTRACTION_CONTRACT.md  FRUGALITY.md  GETTING_STARTED.md  GOVERNANCE.md  INTEGRATIONS.md  LICENSE  MITIGATION_MATRIX.md  OPTIMIZATION_MODEL.md  PENDING.md  PRIOR_ART.md  README.md  RELEASE.md  ROADMAP.md  RULEBOOK.md  SECURITY.md  STANDALONE_USAGE.md  THREAT_MODEL.md  TOOL_MANIFEST.json  USAGE.md  providers.local.json.example  pyproject.toml  robinhood.config.json.example  seneschal.config.json.example
.github/workflows/: ci.yml  publish.yml
OTHER_LANGUAGES/: README_ar.md  README_de.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_ko.md  README_pt.md  README_ru.md  README_zh.md
adversarial_cases/: README.md  hidden_unicode.txt  indirect_prompt_injection.txt  tool_hijack.txt
agentops/: __init__.py  bm25.py  capability_broker.py  capacity_broker.py  cascade.py  cli.py  config.py  context_cache.py  context_packer.py  context_select.py  frugality_ledger.py  health_guard.py  mcp_server.py  openai_compatible_adapter.py  prompt_firewall.py  provider_health.py  provider_profiles.json  provider_profiles.py  provider_state.py  quality_gate.py  request_planner.py  router.py  runner.py  signing.py  token_budget.py
docs/releases/: v0.2.1.md  v0.2.2.md
integrations/cursor/rules/: agentops.mdc
integrations/mcp/: README.md  cursor-setup.md  server_contract.json
integrations/vscode/: tasks.json
scripts/: benchmark_savings.py  install_audit.py  publish.ps1
seneschal/: __init__.py  audit.py  bandit.py  cascade.py  cli.py  config.py  context_cache.py  context_packer.py  context_packet.py  context_select.py  health_guard.py  mcp_server.py  ollama_adapter.py  prompt_firewall.py  provider_profiles.json  provider_profiles.py  provider_state.py  router.py  runner.py  savings.py  signing.py
tests/: test_advanced.py  test_agentops.py  test_seneschal.py
