[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seneschal"
version = "0.2.0"
authors = [
  { name = "SteveBlackbeard" },
]
description = "Provider-neutral, local-first operations layer for token frugality and safer AI-agent work."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ai", "agents", "prompt-injection", "llmops", "security", "frugality"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Repository = "https://github.com/SteveBlackbeard/SENESCHAL-by-Ethernium"
Issues = "https://github.com/SteveBlackbeard/SENESCHAL-by-Ethernium/issues"
Changelog = "https://github.com/SteveBlackbeard/SENESCHAL-by-Ethernium/blob/main/CHANGELOG.md"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
measure = ["tiktoken>=0.7"]
security = ["cryptography>=42"]

[project.scripts]
seneschal = "seneschal.cli:main"
seneschal-mcp = "seneschal.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["seneschal*"]

[tool.setuptools.package-data]
seneschal = ["provider_profiles.json"]
